# the-ray-tracer-pp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
src/: Aggregate.cpp  Aggregate.h  Bounds3f.cpp  Bounds3f.h  CMakeLists.txt  Camera.h  Canvas.cpp  Canvas.h  CheckerPattern.cpp  CheckerPattern.h  ColorPattern.cpp  ColorPattern.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  DualColorPattern.cpp  DualColorPattern.h  GeometricPrimitive.cpp  GeometricPrimitive.h  GradientPattern.cpp  GradientPattern.h  Intersection.cpp  Intersection.h  KdTreeAccel.cpp  KdTreeAccel.h  LightComputations.cpp  LightComputations.h  Lighting.cpp  Lighting.h  Loader.cpp  Loader.h  PatternMaterial.cpp  PatternMaterial.h  PlainMaterial.cpp  PlainMaterial.h  Plane.cpp  Plane.h  Primitive.h  Ray.cpp  (+18 more)
test/: CMakeLists.txt  Cube_Tests.cpp  Cylinder_Tests.cpp  Mat4_Tests.cpp  Transformation_Tests.cpp  Triangle_Tests.cpp  Vec4_Tests.cpp  View_n_Camera_Tests.cpp  World_Tests.cpp  light_n_shading.cpp  normal_reflection_Tests.cpp  object_intersection_TESTs.cpp  pattern_Tests.cpp  ray_inter_Tests.cpp  transparency_n_refraction_Tests.cpp
