add_executable( TEST_SOURCES Vec4_Tests.cpp Mat4_Tests.cpp Transformation_Tests.cpp ray_inter_Tests.cpp object_intersection_TESTs.cpp normal_reflection_Tests.cpp light_n_shading.cpp World_Tests.cpp View_n_Camera_Tests.cpp transparency_n_refraction_Tests.cpp Cube_Tests.cpp Cylinder_Tests.cpp pattern_Tests.cpp Triangle_Tests.cpp)
TARGET_LINK_LIBRARIES( TEST_SOURCES LINK_PUBLIC Catch2::Catch2 tracerMath graphics )